Tools menu item display only discrete permission.

--- a/admin/themes/grav/templates/partials/nav.html.twig
+++ b/admin/themes/grav/templates/partials/nav.html.twig
@@ -71,7 +71,7 @@
                         <a href="{{ base_url_relative }}/config/system"><i class="fa fa-fw fa-wrench"></i><em>{{ "PLUGIN_ADMIN.CONFIGURATION"|tu }}</em></a>
                     </li>
                 {% endif %}
-                {% if authorize(['admin.tools', 'admin.super']) %}
+                {% if authorize(['admin.tools']) %}
                     <li class="{{ (location == 'tools') ? 'selected' : '' }}">
                         <a href="{{ base_url_relative }}/tools">
                             <i class="fa fa-fw fa-briefcase"></i>
