--- a/css/customize.css
+++ b/css/customize.css
@@ -2,6 +2,10 @@
   display: none;
 }
 
+button[data-gpm-checkupdates] {
+  display: none;
+}
+
 @media only all and (min-width: 47.938em) {
   #admin-sidebar {
     float: none;
