--- a/css/customize.css
+++ b/css/customize.css
@@ -32,6 +32,9 @@ button[data-gpm-checkupdates] {
     font-size: 1.5rem;
   }
   #admin-menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
   #admin-menu > li {
     display: table-cell;
