--- a/css/customize.css
+++ b/css/customize.css
@@ -1,3 +1,7 @@
+#admin-main .content-wrapper {
+  height: calc(100vh - 6.5rem);
+}
+
 form .large, 
 form .large.form-input-addon-wrapper input {
   max-width: 100% !important;
